--- a/js/package.json
+++ b/js/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
+    "prepare": "tsc",
     "test": "mocha --ui exports --require ts-node/register 'test/**/*.ts'"
   },
   "repository": {
